<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context="saedc.example.com.LoginPage.Login">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="50dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="150dp"
            android:layout_alignBottom="@+id/Name1"
            android:layout_alignParentStart="true"
            app:srcCompat="@drawable/project" />

        <TextView
            android:id="@+id/info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/imageView"
            android:layout_centerHorizontal="true"
            android:text="@string/trackmonay"
            android:textAlignment="center"
            android:textColor="#fff"
            android:textSize="15sp" />


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_margin="16dp">

            <EditText
                android:id="@+id/Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username"
                android:inputType="textPersonName" />
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/textInputLayou2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            android:layout_margin="16dp">

            <EditText
                android:id="@+id/Number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/salary"
                android:inputType="numberDecimal" />

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/calendarButto"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:text="اضغط لتحديد يوم الراتب"
            android:textColor="@color/alert_default_icon_color" />

        <Button
            android:id="@+id/button2"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/loginbutton"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_menu_send"
            android:text="@string/loginbutton"
            android:textColor="#fff"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>
