<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <android.support.design.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="saedc.example.com.View.MainActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:expanded="false">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collaps"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimary"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <fragment
                    android:id="@+id/fragment_quantity"
                    android:name="saedc.example.com.View.TotalSpendingPrice.TotalSpendingPriceFragment"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_gravity="top|center_horizontal"
                    android:layout_marginTop="20dp"
                    app:layout_collapseMode="parallax"
                    tools:layout="@layout/fragment_total_spending_quantity" />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>

        <FrameLayout
            android:id="@+id/fragment_container1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/app_bar_layout"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />


        <com.github.clans.fab.FloatingActionMenu
            android:id="@+id/menu_red"
            style="@style/MenuButtonsStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:paddingBottom="10dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:menu_colorNormal="@color/colorAccent"
            app:menu_colorPressed="#00a18c"
            app:menu_colorRipple="#008e7b"
            app:menu_fab_label="@string/menu"

            fab:fab_hideAnimation="@anim/hide_to_bottom"
            fab:fab_showAnimation="@anim/show_from_bottom"
            fab:menu_backgroundColor="#ccffffff"
            fab:menu_labels_ellipsize="end"
            fab:menu_labels_singleLine="true">


            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab1"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/monay"
                fab:fab_label="@string/savings"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab2"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_pie_chart"
                fab:fab_label="@string/chart"
                fab:fab_size="mini" />

            <com.github.clans.fab.FloatingActionButton
                android:id="@+id/fab3"
                style="@style/MenuButtonsStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/fab_add"
                fab:fab_label="@string/Addspin"
                fab:fab_size="mini" />




        </com.github.clans.fab.FloatingActionMenu>

    </android.support.design.widget.CoordinatorLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:headerLayout="@layout/nav_header_main2"
        app:menu="@menu/activity_main2_drawer" />

</android.support.v4.widget.DrawerLayout>